write index page

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -2,3 +2,10 @@
 p span{
     vertical-align: middle;
 }
+
+.d-badge img{
+    max-width:120px;
+    height:40px;
+    margin-left: auto;
+    margin-right: auto;
+}
