--- a/_sass/support/_functions.scss
+++ b/_sass/support/_functions.scss
@@ -1,6 +1,5 @@
 @function rem($size, $unit: "") {
-  // $rem-size: $size / $root-font-size;
-  $rem-size: calc(scut-strip-unit($size) / $root-font-size);
+  $rem-size: $size / $root-font-size;
   
   @if $unit == false {
     @return #{$rem-size};
